# taginfo-validate

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  argument_parser.hpp  build.sh  qa_handler.hpp  shell.nix  tag.hpp  taginfo-validate.cc  taginfo_parser.hpp
test/: nodes-taginfo.json  nodes.xml  test.sh
test/fixtures/: nodes.expected.txt
